--- a/vite-react-ts/package.json
+++ b/vite-react-ts/package.json
@@ -20,8 +20,9 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "sortablejs": "^1.14.0",
     "typescript": "^4.3.2",
     "vite": "^2.5.4",
-    "vite-plugin-imp":"^2.0.9"
+    "vite-plugin-imp": "^2.0.9"
   }
 }
