--- a/vite-react-ts/package.json
+++ b/vite-react-ts/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "echarts-for-react": "^3.0.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "sortablejs": "^1.14.0",
