--- a/vite-react-ts/package.json
+++ b/vite-react-ts/package.json
@@ -11,7 +11,8 @@
     "echarts": "^5.2.0",
     "immer": "^9.0.6",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.9.0",
