--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-ejs": "^4.3.0",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.1",
+    "koa2-connect": "^1.0.2",
     "koa2-proxy-middleware": "^0.0.4",
     "pm2": "^5.1.2"
   }
