--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "koa-views": "^7.0.1",
     "koa2-connect": "^1.0.2",
     "koa2-proxy-middleware": "^0.0.4",
+    "mock": "^0.1.1",
+    "mockjs": "^1.1.0",
     "pm2": "^5.1.2",
     "redis": "^4.0.3"
   }
