--- a/vite-vue3-ts/package.json
+++ b/vite-vue3-ts/package.json
@@ -6,14 +6,14 @@
     "build": "vuedx-typecheck . && vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@types/node": "^16.7.10",
-    "@vue/compiler-sfc": "^3.0.4",
-    "@vuedx/typecheck": "^0.3.1-insiders-1606311019.0",
-    "@vuedx/typescript-plugin-vue": "^0.3.1-insiders-1606311019.0",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13"
+    "@types/node": "^17.0.17",
+    "@vue/compiler-sfc": "^3.2.31",
+    "@vuedx/typecheck": "^0.7.4",
+    "@vuedx/typescript-plugin-vue": "^0.7.4",
+    "typescript": "^4.5.5",
+    "vite": "^2.8.1"
   }
 }
