--- a/vite-vue3/package.json
+++ b/vite-vue3/package.json
@@ -6,13 +6,14 @@
     "build": "vite build"
   },
   "dependencies": {
-    "element-plus": "^1.1.0-beta.8",
-    "vue": "^3.0.4"
+    "element-plus": "^2.0.2",
+    "npm-check-updates": "^12.3.0",
+    "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.4",
-    "less": "^4.1.1",
-    "vite": "^1.0.0-rc.13",
-    "less-loader": "^10.0.1"
+    "@vue/compiler-sfc": "^3.2.31",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "vite": "^2.8.1"
   }
 }
