--- a/vite-react-ts/package.json
+++ b/vite-react-ts/package.json
@@ -7,9 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.7",
     "echarts": "^5.3.0",
     "immer": "^9.0.12",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
