--- a/vite-react-ts/package.json
+++ b/vite-react-ts/package.json
@@ -21,11 +21,13 @@
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-grid-layout": "^1.3.2",
     "@types/sortablejs": "^1.10.7",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "echarts-for-react": "^3.0.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "react-grid-layout": "^1.3.4",
     "sortablejs": "^1.14.0",
     "typescript": "^4.5.5",
     "vite": "^2.8.1",
