--- a/vite-vue3-ts/package.json
+++ b/vite-vue3-ts/package.json
@@ -6,10 +6,12 @@
     "build": "vuedx-typecheck . && vite build"
   },
   "dependencies": {
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.17",
+    "@types/node": "^17.0.21",
+    "@vitejs/plugin-vue": "^2.2.4",
     "@vue/compiler-sfc": "^3.2.31",
     "@vuedx/typecheck": "^0.7.4",
     "@vuedx/typescript-plugin-vue": "^0.7.4",
