--- a/vite-vue3-ts/package.json
+++ b/vite-vue3-ts/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "vite-vue3-ts",
+  "name": "vite-vue-typescript-starter",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vuedx-typecheck . && vite build"
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.31",
-    "vue-router": "4"
+    "@varlet/ui": "^1.26.3",
+    "axios": "^0.26.0",
+    "pinia": "^2.0.11",
+    "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@vue/compiler-sfc": "^3.2.31",
-    "@vuedx/typecheck": "^0.7.4",
-    "@vuedx/typescript-plugin-vue": "^0.7.4",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.1"
+    "@vitejs/plugin-vue": "^2.2.0",
+    "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.17.21",
+    "vite": "^2.8.0",
+    "vue-router": "4",
+    "vue-tsc": "^0.29.8"
   }
 }
