--- a/vite-vue3-ts/package.json
+++ b/vite-vue3-ts/package.json
@@ -8,17 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@varlet/ui": "^1.26.3",
-    "axios": "^0.26.0",
-    "pinia": "^2.0.11",
-    "vue": "^3.2.25"
+    "@varlet/ui": "^2.4.2",
+    "axios": "^1.2.1",
+    "dom-to-image": "^2.6.0",
+    "pinia": "^2.0.28",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.0",
-    "typescript": "^4.5.4",
-    "unplugin-vue-components": "^0.17.21",
-    "vite": "^2.8.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "less": "^4.1.3",
+    "typescript": "^4.9.4",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^4.0.3",
     "vue-router": "4",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^1.0.18"
   }
 }
