--- a/vite-react-ts/package.json
+++ b/vite-react-ts/package.json
@@ -7,39 +7,38 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "ahooks": "^3.7.2",
-    "antd": "^4.18.7",
-    "echarts": "^5.3.0",
-    "immer": "^9.0.12",
+    "@ant-design/icons": "^4.8.0",
+    "ahooks": "^3.7.4",
+    "antd": "^5.1.1",
+    "echarts": "^5.4.1",
+    "immer": "^9.0.16",
     "loadsh": "^0.0.4",
     "lodash": "^4.17.21",
-    "next": "^12.2.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "5.3.2",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "5.3.2",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
     "react-sizeme": "^3.0.2",
     "tiny-async-pool": "^2.1.0",
-    "webpack": "^5.0.0"
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.17",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/react-grid-layout": "^1.3.2",
-    "@types/sortablejs": "^1.10.7",
+    "@types/sortablejs": "^1.15.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "axios": "^0.27.2",
+    "axios": "^1.2.1",
     "echarts-for-react": "^3.0.2",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "moment": "^2.29.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "moment": "^2.29.4",
     "react-grid-layout": "^1.3.4",
-    "sortablejs": "^1.14.0",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.1",
-    "vite-plugin-imp": "^2.1.3"
+    "sortablejs": "^1.15.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3",
+    "vite-plugin-imp": "^2.3.1"
   }
 }
