--- a/vite-vue3-ts/package.json
+++ b/vite-vue3-ts/package.json
@@ -12,9 +12,12 @@
     "axios": "^1.2.1",
     "dom-to-image": "^2.6.0",
     "pinia": "^2.0.28",
+    "rrweb": "^2.0.0-alpha.4",
+    "rrweb-player": "^1.0.0-alpha.4",
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/dom-to-image": "^2.6.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "less": "^4.1.3",
     "typescript": "^4.9.4",
